--- a/04.2 Badmintonfest 2/index.html
+++ b/04.2 Badmintonfest 2/index.html
@@ -7,8 +7,8 @@
 
 </head>
 <body>
-<input title="udklædning" type="text">
-<input title="alder" type="number">
+<input id="dress" title="udklædning" type="text">
+<input id="age" title="alder" type="number">
 <button onclick="checkAccess();">Adgang</button>
 <div id="resultat"></div>
 
