--- a/04 Demo/DOM/index.html
+++ b/04 Demo/DOM/index.html
@@ -8,6 +8,7 @@
 Her er <div id="input">noget tekst</div>
 <h1>Noget andet tekst</h1>
 Noget <span> 3 tekst tekst</span>
+<!-- kommer på samme linje som det ovenfor --->
 Her kan du <input placeholder="Indtaste noget tekst" title="test">
 
 <div id="output">Her er plads til noget andet tekst</div>
