--- a/05 Demo/MVC program/index.html
+++ b/05 Demo/MVC program/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <script src="script.js"></script>
 </head>
+<!-- VIEW -->
 <body>
 <div id="logindiv">
     <input type="text" id="username" title="username">
