--- a/05 Demo/MVC program - med Objekter/index.html
+++ b/05 Demo/MVC program - med Objekter/index.html
@@ -11,14 +11,14 @@
 <div id="logindiv">
     <input type="text" id="username" title="username">
     <input type="text" id="password" title="password">
-    <button id="login" onclick="login()">Log in</button>
+    <button id="login" onclick="controller.login()">Log in</button>
 </div>
 
 <!-- Vises når brugeren er logget ind -->
 <div id="loggedindiv" hidden>
     Velkommen, <span id="usernamediv"></span>. <br>
     Du er nu logget ind
-    <button id="logout" onclick="logout()">Log out</button>
+    <button id="logout" onclick="controller.logout()">Log out</button>
 </div>
 
 </body>
