--- a/04 FPS Bræt med knapper/index.html
+++ b/04 FPS Bræt med knapper/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <button id="col1" onclick="col(1);">-- 1 --</button>
-<button id="col2" onclick="col(2)">-- 2 --</button>
-<button id="col3" onclick="col(3)">-- 3 --</button>
-<button id="col4" onclick="col(4)">-- 4 --</button>
-<button id="col5" onclick="col(5)">-- 5 --</button>
-<button id="col6" onclick="col(6)">-- 6 --</button>
-<button id="col7" onclick="col(7)">-- 7 --</button><br>
+<button id="col2" onclick="col(2);">-- 2 --</button>
+<button id="col3" onclick="col(3);">-- 3 --</button>
+<button id="col4" onclick="col(4);">-- 4 --</button>
+<button id="col5" onclick="col(5);">-- 5 --</button>
+<button id="col6" onclick="col(6);">-- 6 --</button>
+<button id="col7" onclick="col(7);">-- 7 --</button><br>
 <canvas id="mycanvas" width="800" height="600"></canvas>
 <script src="fps.js"></script>
 </body>
