--- a/04 FPS Bræt med knapper/index.html
+++ b/04 FPS Bræt med knapper/index.html
@@ -5,13 +5,13 @@
     <title>Fire på Stribe</title>
 </head>
 <body>
-<button id="col1" onclick="col(0);">-- 1 --</button>
-<button id="col2" onclick="col(1);">-- 2 --</button>
-<button id="col3" onclick="col(2);">-- 3 --</button>
-<button id="col4" onclick="col(3);">-- 4 --</button>
-<button id="col5" onclick="col(4);">-- 5 --</button>
-<button id="col6" onclick="col(5);">-- 6 --</button>
-<button id="col7" onclick="col(6);">-- 7 --</button><br>
+<button id="col1" onclick="putPieceInColumnNo(0);">-- 1 --</button>
+<button id="col2" onclick="putPieceInColumnNo(1);">-- 2 --</button>
+<button id="col3" onclick="putPieceInColumnNo(2);">-- 3 --</button>
+<button id="col4" onclick="putPieceInColumnNo(3);">-- 4 --</button>
+<button id="col5" onclick="putPieceInColumnNo(4);">-- 5 --</button>
+<button id="col6" onclick="putPieceInColumnNo(5);">-- 6 --</button>
+<button id="col7" onclick="putPieceInColumnNo(6);">-- 7 --</button><br>
 <canvas id="mycanvas" width="800" height="600"></canvas>
 <script src="fps.js"></script>
 </body>
