--- a/04 Demo/DOM/index.html
+++ b/04 Demo/DOM/index.html
@@ -5,13 +5,16 @@
     <title>Nyttige Elementer</title>
 </head>
 <body>
-Her er <div id="input">noget tekst</div>
-<h1>Noget andet tekst</h1>
-Noget <span> 3 tekst tekst</span>
-<!-- kommer på samme linje som det ovenfor --->
-Her kan du <input placeholder="Indtaste noget tekst" title="test">
+Her er  <div id="input">noget tekst</div>
 
-<div id="output">Her er plads til noget andet tekst</div>
+<h1>Noget andet tekst</h1>
+
+Ting <span> i en span </span> kommer på samme linje.
+BR giver et linebreak.<BR>
+<!-- kommer på samme linje som det ovenfor --->
+Her kan du <input placeholder="Indtaste noget tekst" title="test"> <BR>
+
+Ting <div id="output">i en div</div>, kommer i en sektion for sig.
 <script src="script.js"></script>
 </body>
 </html>
