Nye løsninger og forbedringer

--- a/04 Demo/Events/index.html
+++ b/04 Demo/Events/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Events</title>
+    <!-- Husk at scriptet kører før DOM'en er loaded -->
     <script src="script.js"></script>
+
 </head>
 <body>
+<div id="clickfield">Tryk her</div>
+
+<input type="button" value="Eller tryk her">
+
+
 
 </body>
 </html>
